--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy-to-staging:
+  deploy-to-production:
     runs-on: ubuntu-latest
     steps:
       - name: Cloning repo
