--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
 		"ext-mysqli": "*",
 		"ext-curl": "*",
 		"ext-dom": "*",
+		"ext-gd": "*",
 		"ext-exif": "*",
 		"ext-fileinfo": "*",
 		"ext-hash": "*",
