--- a/fpm_custom.conf
+++ b/fpm_custom.conf
@@ -1,6 +1,8 @@
 php_value[post_max_size] = 512M
 php_value[upload_max_filesize] = 512M
 php_value[memory_limit] = 1024M
+php_value[max_execution_time] = 300
+php_value[max_input_time] = 300
 php_flag[opcache.enable] = on
 php_flag[opcache.enable_cli] = on
 php_flag[opcache.validate_timestamps] = on
